# template-test

./: README.md  pyproject.toml
.github/workflows/: main.yml
template/: __main__.py  example_lib.py
tests/: test_example_lip.py
