[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Michał Gomoliński <michalgomol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.6"

[tool.poetry.group.test.dependencies]
deepdiff = "^6.3"
httpretty = "^1.0"
pytest = "^7.1"
pytest-cov = "^4.0"
pytest-mock = "^3.9"
pytest-randomly = "^3.12"
pytest-xdist = { version = "^3.1", extras = ["psutil"] }

[tool.poetry.group.typing.dependencies]
mypy = ">=1.0"
types-jsonschema = ">=4.9.0"
types-requests = ">=2.28.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
